# core-dispatch

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/skills/code-change-verification/: SKILL.md
.agents/skills/pr-draft-summary/: SKILL.md
.github/workflows/: ci.yml  release.yml
coredispatch/: __init__.py  callbacks.py  cli.py  config.py  dispatcher.py  models.py  webhooks.py
coredispatch/adapters/: __init__.py  base.py  memory.py
docs/: ADAPTERS.md  ARCHITECTURE.md  DEMO.md  LAUNCH_PACK.md  REPO_HEALTH.md  RUNBOOK.md  WEBHOOK_SIGNATURES.md
examples/: leads.json  simulate_run.py  webhook_handler.py
tests/: test_coredispatch.py  test_signatures.py
