[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "core-dispatch"
version = "0.1.0"
description = "An open-source framework for AI voice-dispatch workflows: missed-call intake, qualifying callbacks, booking, and follow-up."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Denis Redzic" }]
keywords = [
    "voice-ai",
    "dispatch",
    "missed-call",
    "callback",
    "lead-qualification",
    "telephony",
    "vapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
coredispatch = "coredispatch.cli:main"

[project.urls]
Homepage = "https://github.com/redzicdenis08-afk/core-dispatch"
Issues = "https://github.com/redzicdenis08-afk/core-dispatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["coredispatch"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
